<resources>
    <string name="app_name">TransportesForIlender</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_chofer">choferm</string>
    <string name="menu_cliente">clientem</string>
    <string name="menu_ruta">menurut</string>
    <string name="menu_vehiculo">menuvehi</string>
    <string name="menu_reporte">reporteme</string>
    <string name="menu_rutas_chofer">rutaschoferme</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="first_fragment_label">firstfragment</string>
    <string name="second_fragment_label">secondfragment</string>
    <string name="bienvenidostring">BIENVENIDO</string>
    <string name="TextoCero">0</string>
    <string name="rutas_finalizadas_de_hoy">RUTAS FINALIZADAS DE HOY</string>
    <string name="rutas_pendientes_de_hoy">RUTAS PENDIENTES DE HOY</string>
    <string name="sin_data">SIN DATA</string>
    <string name="top_vehiculo_del_mes">TOP VEHICULO DEL MES</string>
    <string name="top_chofer_del_mes">TOP CHOFER DEL MES</string>
    <string name="rutas_realizadas_del_mes">RUTAS REALIZADAS DEL MES</string>
    <string name="rutas_pendientes_del_dia">RUTAS PENDIENTES DEL DIA</string>
    <string name="rutas_finalizadas_del_dia">RUTAS FINALIZADAS DEL DIA</string>
    <string name="todo">TODO</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>